# oncoprep

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGES.md  Dockerfile  README.md  Singularity.def  combat_report.html  pyproject.toml  pytest.ini  radiomics_combat.json  survey_all.sh  survey_b1.txt  survey_batch.sh  survey_datasets.sh  survey_results.txt  vasari_radiology_report.html  vasari_radiology_report.txt
.github/workflows/: ci.yml  python-app.yml
docs/: Makefile  changes.md  conf.py  contributing.md  index.rst  installation.md  quickstart.md  requirements.txt  tutorial.md
docs/_static/: .gitkeep
docs/api/: interfaces.md  io.md  utils.md  workflows.md
docs/usage/: cli.md  docker.md  group_combat.md  hpc.md  segmentation.md  vasari.md
examples/: mapping_template.txt
examples/bids/: dataset_description.json
examples/bids/derivatives/oncoprep/sub-001/anat/: sub-001_desc-brain_mask.json  sub-001_from-MNI152NLin2009cAsym_to-T1w_mode-image_xfm.h5  sub-001_space-MNI152NLin2009cAsym_desc-preproc_T1w.json
examples/bids/derivatives/oncoprep/sub-001/figures/: sub-001_desc-about_T1w.html  sub-001_desc-conform_T1w.html  sub-001_desc-summary_T1w.html
examples/bids/derivatives/oncoprep/sub-002/anat/: sub-002_desc-brain_mask.json  sub-002_desc-preproc_FLAIR.json  sub-002_desc-preproc_T1w.json  sub-002_desc-tumorOld_dseg.json  sub-002_space-MNI152NLin2009cAsym_desc-brain_mask.json
examples/bids/derivatives/oncoprep/sub-002/figures/: sub-002_desc-about_T1w.html  sub-002_desc-conform_T1w.html  sub-002_desc-summary_T1w.html
examples/bids/sub-001/anat/: sub-001_FLAIR.json  sub-001_T1w.json  sub-001_T2w.json
examples/bids/sub-001/perf/: sub-001_perf.json
examples/bids/sub-002/anat/: sub-002_ce-gadovist_T1w.json
examples/data/002/T2_SPC_DA-FL_SAG_P2_1_0_0012/: SYNTHETIC.MR.ONCOPREP_TEST.0012.0010.2025.01.01.00.00.00.000000.100010.IMA
oncoprep-docker/: README.md  pyproject.toml
oncoprep-docker/oncoprep_docker/: __init__.py
scripts/: convert_acrin_dsc_to_bids.py  convert_acrin_fmiso_to_bids.py  convert_brats_to_bids.py  convert_glis_rt_to_bids.py  convert_lumiere_to_bids.py  convert_ucsd_ptgbm_to_bids.py  convert_ucsf_pdgm_to_bids.py  convert_upenn_gbm_to_bids.py  pull_seg_models.sh  qc_dataset_metrics.py
src/oncoprep/: __init__.py  cli.py  conversion_recovery.py  dicom_cli.py  docker.py  models_cli.py
src/oncoprep/bids/: __init__.py  bids_filtering.py  bids_validation.py
src/oncoprep/config/: __init__.py  cpu_dockers.json  dockers.json  fileformats.json  gpu_dockers.json  survival_dockers.json
src/oncoprep/data/: __init__.py
src/oncoprep/dicom/: __init__.py  batch_conversion.py
src/oncoprep/interfaces/: __init__.py  bids.py  cifti.py  freesurfer.py  fsl.py  gifti.py  mriqc.py  msm.py  nninteractive.py  radiomics.py  reports.py  surf.py  templateflow.py  vasari.py  workbench.py
src/oncoprep/io/: __init__.py  brats.py  loaders.py
src/oncoprep/reports/: __init__.py  report.py  template.html.j2
src/oncoprep/utils/: __init__.py  bids.py  collate.py  labels.py  logging.py  misc.py  segment.py
src/oncoprep/workflows/: __init__.py  _compat.py  anatomical.py  base.py  brats_outputs.py  conversion.py  dicom_conversion.py  fusion.py  group.py  metrics.py  mriqc.py  nninteractive.py  outputs.py  preproc.py  radiomics.py  reports.py  segment.py  surfaces.py  vasari.py
src/oncoprep/workflows/fit/: __init__.py  registration.py
tests/: README.md  __init__.py  conftest.py  generate_synthetic_data.py  test_conversion.py  test_dicom_conversion.py  test_integration.py  test_mriqc.py  test_nninteractive.py  test_preprocessing.py  test_radiomics.py  test_vasari.py
validation/: README.md  __init__.py  claim_checklist.py  config.py  figures.py  metrics.py  phase_a.py  phase_b.py  phase_c.py  phase_d.py  phase_e.py  qc_report.json  radiomics_stability.py  run_all.py  stats.py  tables.py
