[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoprep"
version = "0.1.0"
description = "A toolbox for analysing neuro-oncology MRI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Nikitas C. Koussis" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "nipype>=1.8",
  "nibabel>=5.1",
  "nilearn>=0.10",
  "pybids>=0.16",
  "pydicom>=2.4",
  "jinja2>=3.1",
  "packaging>=23.2",
  "click>=8.1",
  "bids-validator",
  "weasyprint>=61",
  "niworkflows",
  "templateflow",
  "dcm2niix",
]

[project.optional-dependencies]
ants = [
    "antspyx",
]
hd-bet = [
    "hd-bet",
]
torch = [
    "torch",
    "torchvision",
    "torchaudio",
]

dev = [
  "pytest>=7.4",
  "ruff>=0.3",
]

[project.scripts]
oncoprep = "oncoprep.cli:main"
oncoprep-dicom = "oncoprep.dicom_cli:main"
# Legacy aliases (deprecated, use oncoprep-dicom instead)
oncoprep-conversion = "oncoprep.dicom_cli:main"
oncoprep-batch = "oncoprep.dicom_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "oncoprep",
  "oncoprep.interfaces",
  "oncoprep.io",
  "oncoprep.reports",
  "oncoprep.utils",
  "oncoprep.workflows",
  "oncoprep.workflows.fit",
]

