[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoprep"
version = "0.2.4"
description = "A toolbox for analysing neuro-oncology MRI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Nikitas C. Koussis" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "acres",
  "numpy",
  "nipype>=1.8",
  "nibabel>=5.1",
  "nilearn>=0.10",
  "pybids>=0.16",
  "pydicom>=2.4",
  "jinja2>=3.1",
  "packaging>=23.2",
  "click>=8.1",
  "bids-validator",
  "weasyprint>=61",
  "niworkflows",
  "templateflow",
  "dcm2niix",
  "picsl-greedy",
  "psutil>=5.4",
  "torch",
  "torchvision",
  "torchaudio",
  "huggingface_hub",
  "nnInteractive>=1.0"
]

[project.optional-dependencies]
hd-bet = [
    "hd-bet",
]
radiomics = [
    "pyradiomics>=3.0",
    "neuroCombat>=0.2.12",
]
vasari = [
    "vasari-auto>=0.1.0",
]
mriqc = [
    "mriqc>=24.0",
]
# torch = [
#     "torch",
#     "torchvision",
#     "torchaudio",
# ]

dev = [
  "pytest>=7.4",
  "ruff>=0.3",
]

docs = [
  "sphinx>=7.0",
  "furo>=2024.1",
  "sphinx-copybutton>=0.5",
  "myst-parser>=2.0",
]

[project.scripts]
oncoprep = "oncoprep.cli:main"
oncoprep-docker = "oncoprep.docker:main"
oncoprep-convert = "oncoprep.dicom_cli:main"
oncoprep-models = "oncoprep.models_cli:main"
# Legacy aliases (deprecated, use oncoprep-dicom instead)
oncoprep-conversion = "oncoprep.dicom_cli:main"
oncoprep-batch = "oncoprep.dicom_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "oncoprep",
  "oncoprep.bids",
  "oncoprep.config",
  "oncoprep.data",
  "oncoprep.dicom",
  "oncoprep.interfaces",
  "oncoprep.io",
  "oncoprep.utils",
  "oncoprep.workflows",
  "oncoprep.workflows.fit",
]

[tool.setuptools.package-data]
"oncoprep.config" = ["*.json"]
"oncoprep.data" = ["*.txt", "atlas_masks/mni152/*.nii.gz", "atlas_masks/sri24/*.nii.gz"]

