[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoprep-docker"
version = "0.1.1"
description = "A lightweight Docker wrapper for the OncoPrep neuro-oncology MRI preprocessing pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Nikitas C. Koussis" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/nikitas-k/oncoprep"
Issues = "https://github.com/nikitas-k/oncoprep/issues"

[project.scripts]
oncoprep-docker = "oncoprep_docker:main"

[tool.setuptools]
packages = ["oncoprep_docker"]
